# softisp

./: CMakeLists.txt  LICENSE  README.md  TRACKING.md  build_onnx_rule_engine.py  test_integrate.cpp
ci/: pipeline.yml
src/: allocator.cpp  main.cpp  monitor.cpp  monitor.hpp  scheduler.cpp  scheduler.hpp  session_manager.cpp  session_manager.hpp  worker.cpp  worker.hpp
src/core/microblocks/: color_transform.cpp  color_transform.h  demosaic.cpp  demosaic.h  denoise.cpp  denoise.h
src/core/onnx_microblocks/: onnx_dmabuf_allocator.cpp  onnx_dmabuf_allocator.h  onnx_inferencer.cpp
src/core/session_manager/: lf_queue.h  session_manager.cpp  session_manager.h
src/include/: allocator.hpp  mpmc_bounded_queue.hpp  softisp.hpp
tests/: CMakeLists.txt  test_allocator.cpp  test_mpmc.cpp
tests/unit/: onnx_dmabuf_allocator_test.cpp
